--- a/index-4.html
+++ b/index-4.html
@@ -18,13 +18,13 @@
   <script>
     // 1) Números (formato internacional SEM "+")
     const phones = [
-      "351967062684",
-      "351967062657",
-      // "351960131439",
+      "351910607531",
+      "351967062651",
+      "351967062671",
     ];
 
     // 2) Texto base (não-encodado) -> será encodado dinamicamente
-    const rawMsg = "Olá Pedrito vim através do teu anúncio e gostava de entrar no teu grupo gratuito";
+    const rawMsg = "Olá cadete quero receber os 50€";
 
     // 3) Round-robin por sessão (fallback para random)
     function pickPhone() {
